FIX - Icon width on mobile for the services component

--- a/src/components/Services/services.css
+++ b/src/components/Services/services.css
@@ -47,13 +47,13 @@
 }
 
 .service__list p {
-  font-size: 1rem;
+  font-size: 0.9rem;
 }
 
 /* MEDIA QUERIES MD */
 @media screen and (max-width: 1024px) {
   .services__container {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     gap: 2rem;
   }
 
@@ -66,5 +66,9 @@
   .services__container {
     grid-template-columns: 1fr;
     gap: 1.5rem;
+  }
+
+  .service__list p {
+    font-size: 0.9rem;
   }
 }
